[project]
name = "mason-alberta-phonetic-segmenter"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
authors = [
  {email = "matthew.curtis.kelley@gmail.com"},
  {name = "Matthew C. Kelley, Scott James Perry, Benjamin V. Tucker, Pertti Palo"},
]
requires-python = "=3.11"
dependencies = []

[project.scripts]
maps = "maps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
